# numida_engineering_hub_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/accounts/: admin.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_models.py  test_serializers.py  test_user_detail_view.py  test_user_list_view.py  test_views.py
apps/aob/: admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/aob/migrations/: 0001_initial.py
apps/aob/tests/: test_delete_view.py  test_detail_view.py  test_list_view.py  test_models.py  test_selectors.py  test_serializers.py  test_services.py  test_update_view.py  test_views.py
apps/dashboard/: selectors.py  serializers.py  urls.py  views.py
apps/dashboard/tests/: test_selectors.py  test_views.py
apps/presence/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/presence/migrations/: 0001_initial.py
apps/presence/tests/: test_models.py  test_presence_list_view.py  test_presence_status.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
apps/pto/: admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/pull_requests/: admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/standups/: admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
common/: authentication.py  constants.py  exceptions.py  logging.py  middleware.py  pagination.py  permissions.py  responses.py  schema.py  validators.py
common/utils/: dates.py  strings.py  urls.py
config/: api_v1_urls.py  asgi.py  urls.py  views.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
numida_engineering_hub_backend/: asgi.py  settings.py  urls.py  wsgi.py
tests/: auth.py  base.py  helpers.py  test_exceptions.py  test_health.py  test_logging.py  test_openapi.py
(+33 files in other folders)
