[project]
name = "numida-engineering-hub-backend"
version = "1.0.0"
description = "Backend for the Numida internal engineering workspace (standups, presence, PTO, and related tooling)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.1,<6",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.2",
    "django-filter>=24.3",
    "django-cors-headers>=4.4",
    "drf-spectacular>=0.27",
    "django-environ>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "coverage[toml]>=7.6",
    "ruff>=0.15",
    "pre-commit>=4.0",
]

[tool.coverage.run]
source = ["apps", "common", "config"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "manage.py",
    # Deployment entrypoints and environment-specific settings modules —
    # boilerplate wiring exercised by actually running the app in that
    # environment, not by the test suite (which always runs under
    # config.settings.test).
    "config/asgi.py",
    "config/wsgi.py",
    "config/settings/development.py",
    "config/settings/production.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# A floor, not a target — guards against coverage silently regressing.
# Set a few points below the actual measured total so incidental,
# non-behavioral changes don't fail CI on their own.
fail_under = 90

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
]
ignore = [
    "DJ001", # allow null=True on CharField/TextField (common in early-stage models)
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "common", "config", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
